--- a/src/components/PokemonCard/style.module.css
+++ b/src/components/PokemonCard/style.module.css
@@ -36,7 +36,8 @@
 }
 
 .pokemonCard.selected {
-    margin-top: -40px;
+    margin-top: -20px;
+    margin-bottom: 20px;
 }
 
 .cardFront,
@@ -59,6 +60,12 @@
     transform: rotateY(0deg);
     z-index: 2;
 }
+
+.pokemonCard:active .wrap.front::after,
+.pokemonCard:focus .wrap.front::after {
+    border-color: var(--rock);
+}
+
 
 .wrap {
     position: absolute;
